# guibot

./: .gitignore  README.md  event.py  pyproject.toml  setup.ps1  setup.sh
automations/: acquire_clicks.py  autoclick.a.py  autoclick.py  change_text_and_font_color.a.py  coll_io.a.py  keep_alive.a.py  new_automation.py  power_and_click.a.py  reset_anydesk.a.py  resize_image.a.py  resize_tables.a.py
src/: automation.py  base_controller.py  clipboard.py  enums.py  env.py  keyboard_controller.py  keyboard_listener.py  logger.py  mouse_controller.py  point.py
