[project]
name = "Guibot"
version = "1.0.0"
description = "Library to control the mouse and keyboard automatically"
authors = [
  { name = "Valerio Molinari", email = "valeriomolinariprogrammazione@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }

dependencies = [
    "pynput>=1.7.6",
    "colored>=2.3.0"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
packages = ["src"]
