[project]
name = "Guibot"
version = "1.1.5"
description = "Library to control the mouse and keyboard automatically"
authors = [
  { name = "Valerio Molinari", email = "valeriomolinariprogrammazione@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
  "pynput>=1.7.6",
  "colored>=2.3.0"
]

[tool.setuptools.packages.find]
where = ["src"]
